<resources>

    <string name="app_name">Temperature Converter</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Temperature Converter</string>
    <color name="myColor">#AAAACC</color>
    <string name="celsius">to Celsius</string>
    <string name="fahrenheit">to Fahrenheit</string>
	<string name="hint">Enter Temperature</string>
	<string name="calc">Calculate</string>
	<string name="clear">Clear</string>
</resources>